[FEATURE][ADD] - Projeto Lumen
 * Projeto Base Lumen Iniciado

--- a/.env.intranetlocal
+++ b/.env.intranetlocal
@@ -18,6 +18,7 @@ DB_USERNAME=intranet
 DB_PASSWORD=intranet
 DB_CHARSET=utf8
 DB_COLLATION=utf8_general_ci
+DB_ENGINE=MyISAM
 
 CACHE_DRIVER=array
 SESSION_DRIVER=cookie
