--- a/html/api/composer.json
+++ b/html/api/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "firebase/php-jwt": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -26,7 +27,10 @@
     "autoload-dev": {
         "classmap": [
             "tests/"
-        ]
+        ],
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "scripts": {
         "post-root-package-install": [
