[FEATURE][ADD] - Autorização com regra de negócio aplicada
 * Autorização utilizando a biblioteca tymon/jwt-auth
 * Regra de negócio aplicada a autorização (Grupo, Perfil, etc.)
 * Implementação do I18N (internacionalização)
 * Atualização dos arquivos de tradução
 * Implementação do Domain-Driven Design
 * Implementação da classe de Regex (Biblioteca de regex)
 * Implementação da classe de Msg (Handling de mensagens)
 * Adicionado testes de handling de erros

--- a/.env.intranetlocal
+++ b/.env.intranetlocal
@@ -29,3 +29,6 @@ MYSQL_HOST=mysql
 MYSQL_DATABASE=intranet
 MYSQL_USER=intranet
 MYSQL_PASSWORD=intranet
+
+JWT_TTL=60            # 60 = expires in 1 hour (JWT time life)
+JWT_REFRESH_TTL=20160 # 20160 = refresh every 14 days (JWT refresh time)
