--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ modules.xml
 
 ### PhpStorm+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+#oauth keys
+oauth-*.key
