--- a/html/api/composer.json
+++ b/html/api/composer.json
@@ -7,13 +7,14 @@
     "require": {
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~2.2",
-        "firebase/php-jwt": "dev-master"
+        "tymon/jwt-auth": "^1.0.0-rc.3",
+        "vlucas/phpdotenv": "~2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "mockery/mockery": "~1.0",
+        "irazasyed/larasupport": "~1.6"
     },
     "autoload": {
         "classmap": [
